cloud-init/kubernetes/agent-userport-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: saw-agent-openclaw
  namespace: ${NS}
  labels:
    app.kubernetes.io/name: secure-agent-workspace
    app.kubernetes.io/component: saw-agent
spec:
  host: saw-agent-openclaw.${NS}.dal.dev.cirrus.ibm.com
  port:
    targetPort: userport
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: saw-agent
    weight: 100
